# gnn-network-routing

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: analyze_network_patterns.py  download_topology_zoo.py
src/gnn_routing/: __init__.py  evaluate.py  train.py
src/gnn_routing/models/: __init__.py  mpnn.py
