[project]
name = "gnn-network-routing"
version = "0.1.0"
description = "Learning shortest path heuristics with Graph Neural Networks for cross-topology generalization"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
    "wandb>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnn_routing"]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
